[package]
name = "gen_merkletree_cache"
version = "0.0.0"
authors = ["xutianyi <xutianyi1999@live.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
sha2 = "0.10"
digest = "0.10"

